test/cilium/overlays/dev0/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: echo
  namespace: echo-00
spec:
  ingressClassName: cilium
  rules:
    - host: echo.dev0.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: echo
                port:
                  number: 63636
