test/cilium/overlays/dev0/kustomization.yaml
---
apiVersion: kustomize.config.k8s.io/v1beta1
kind: Kustomization

resources:
  - ../../base
  - ./ingress.yaml

patchesStrategicMerge:
  - ./deploy.env.patch.yaml
